# McGrids

./: CMakeCache.txt  CMakeLists.txt  setup.py
differentiable_mcmt/: CMakeLists.txt  fast_mcmt.cpp  fast_mcmt.hpp
examples/: extract_mesh_from_sdf.py
old_files/: mcgrids.py
python/: mcmt_torch.cpp
